--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
 
 <main>
     <div class="container body-content span=8 offset=2">
-        <form class="form-horizontal">
+        <form class="form-horizontal" action="indexlogged.html">
             <fieldset>
                 <legend>Register</legend>
                 <div class="form-group">
